<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorPrimaryDark"
    tools:context="com.dapetoo.ttt.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo" />

    <Button
        android:id="@+id/playGame"
        android:layout_marginTop="41dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_game"/>

    <Button
        android:id="@+id/gameInstruction"
        android:layout_marginTop="41dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction"/>

    <Button
        android:onClick="exitApp"
        android:layout_marginTop="41dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:paddingTop="25dp"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        tools:targetApi="jelly_bean"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:src="@drawable/developer"
        android:contentDescription="@string/developer_logo" />


</LinearLayout>

