<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/colorPrimaryDark"
    tools:context="com.dapetoo.ttt.GameInstruction">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/how_to_play"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingBottom="10dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:targetApi="jelly_bean" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="15sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="sans-serif"
        tools:targetApi="jelly_bean"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textSize="15sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="sans-serif"
        tools:targetApi="jelly_bean"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        tools:targetApi="jelly_bean"/>

    <ImageView
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:contentDescription="@string/developer_logo"
        android:src="@drawable/developer" />

</LinearLayout>

