<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:background="@color/colorPrimaryDark"
    tools:context="com.dapetoo.ttt.GameType">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="GAME TYPE"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:targetApi="jelly_bean" />

    <Button
        android:id="@+id/onePlayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/one_player"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/twoPlayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/two_player"
        app:layout_constraintTop_toBottomOf="@id/onePlayer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <ImageView
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:contentDescription="@string/developer_logo"
        android:src="@drawable/developer" />

</android.support.constraint.ConstraintLayout>