<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.dapetoo.ttt.HardLevel">

    <android.support.v7.widget.AppCompatButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_game"
        android:id="@+id/NewGame"
        />

    <TextView
        android:textColor="@color/colorAccent"
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/information"
        android:textSize="20sp" />
    <GridLayout
        android:padding="15dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:rowCount="5"
        android:columnCount="5">

        <Button
            android:id="@+id/button1"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button10"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button11"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button13"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button14"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button15"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button16"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button17"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button18"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button19"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button20"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button21"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button22"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button23"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button24"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button25"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textSize="30sp" />

    </GridLayout>

    <TextView
        android:id="@+id/resultDashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/result_dashboard"
        android:textSize="20sp" />


    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:textSize="20sp"
            android:textStyle="italic"
            android:id="@+id/human"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player" />

        <TextView
            android:textSize="20sp"
            android:textStyle="italic"
            android:id="@+id/playerCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:textSize="20sp"
            android:textStyle="italic"
            android:id="@+id/draw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw" />

        <TextView
            android:textSize="20sp"
            android:textStyle="italic"
            android:id="@+id/drawCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:textSize="20sp"
            android:textStyle="italic"
            android:id="@+id/computer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer" />

        <TextView
            android:textSize="20sp"
            android:textStyle="italic"
            android:id="@+id/computerCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <android.support.v7.widget.AppCompatButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit_game"
        android:id="@+id/exitGame"
        />

</LinearLayout>
